--- a/Properties.html
+++ b/Properties.html
@@ -16,9 +16,9 @@
     </div>
     <nav id="main-nav" class="nav">
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="properties.html" class="active">Properties</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/properties.html" class="active">Properties</a></li>
+        <li><a href="/about.html">About</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
@@ -94,9 +94,9 @@
       </div>
       <nav class="footer-nav" aria-label="Footer Navigation">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="properties.html">Properties</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="/properties.html">Properties</a></li>
+          <li><a href="/about.html">About</a></li>
           <li><a href="about.html#contact">Contact</a></li>
         </ul>
       </nav>
