--- a/About.html
+++ b/About.html
@@ -249,7 +249,12 @@
         animatedEls.forEach(el => el.classList.add('is-visible'));
       }
     });
+
+    // URL rewrites
+    const rewrites = [
+      { source: "/about", destination: "/about.html" },
+      { source: "/properties", destination: "/properties.html" }
+    ];
   </script>
 </body>
 </html>
-``` 
