--- a/Properties.html
+++ b/Properties.html
@@ -255,6 +255,12 @@
 
     // Initial render
     filterPropertiesWithPagination();
+
+    // URL rewrites
+    const rewrites = [
+      { source: "/about", destination: "/about.html" },
+      { source: "/properties", destination: "/properties.html" }
+    ];
   </script>
 </body>
 </html>
