--- a/Properties.html
+++ b/Properties.html
@@ -16,10 +16,10 @@
     </div>
     <nav id="main-nav" class="nav">
       <ul>
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="/properties.html" class="active">Properties</a></li>
-        <li><a href="/about.html">About</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="properties.html" class="active">Properties</a></li>
+        <li><a href="about.html">About</a></li>
+         <li><a href="about.html#contact">Contact</a></li>
       </ul>
     </nav>
     <button class="hamburger" id="nav-toggle" aria-label="Open navigation" aria-expanded="false" aria-controls="main-nav">
@@ -94,10 +94,10 @@
       </div>
       <nav class="footer-nav" aria-label="Footer Navigation">
         <ul>
-          <li><a href="/index.html">Home</a></li>
-          <li><a href="/properties.html">Properties</a></li>
-          <li><a href="/about.html">About</a></li>
-          <li><a href="about.html#contact">Contact</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="properties.html">Properties</a></li>
+          <li><a href="about.html">About</a></li>
+           <li><a href="about.html#contact">Contact</a></li>
         </ul>
       </nav>
       <div class="footer-contact">
