--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     </div>
     <nav id="main-nav" class="nav">
       <ul>
-        <li><a href="/index.html" class="active">Home</a></li>
-        <li><a href="/properties.html">Properties</a></li>
-        <li><a href="/about.html">About</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="properties.html">Properties</a></li>
+        <li><a href="about.html">About</a></li>
+         <li><a href="about.html#contact">Contact</a></li>
       </ul>
     </nav>
     <button class="hamburger" id="nav-toggle" aria-label="Open navigation" aria-expanded="false" aria-controls="main-nav">
@@ -38,7 +38,7 @@
       <div class="hero-content">
         <h1>Your Clear Path to Trusted Property Investments</h1>
         <p>Structurebase screens every square metre in Lagos, Abuja, and London, so you buy once and build wealth for generations.</p>
-        <a href="/about.html#contact" class="cta accent">Request Consultation</a>
+        <a href="about.html#contact" class="cta accent">Request Consultation</a>
       </div>
     </section>
 
@@ -210,10 +210,10 @@
       </div>
       <nav class="footer-nav" aria-label="Footer Navigation">
         <ul>
-          <li><a href="/index.html">Home</a></li>
-          <li><a href="/properties.html">Properties</a></li>
-          <li><a href="/about.html">About</a></li>
-          <li><a href="about.html#contact">Contact</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="properties.html">Properties</a></li>
+          <li><a href="about.html">About</a></li>
+           <li><a href="about.html#contact">Contact</a></li>
         </ul>
       </nav>
       <div class="footer-contact">
